--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "moment": "^2.19.2",
     "object-assign": "4.1.1",
     "promise": "7.1.1",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
+    "rc-table": "^6.1.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "react-error-overlay": "^1.0.9",
     "react-intl": "^2.3.0",
     "react-redux": "^5.0.5",
@@ -65,47 +66,47 @@
     "extends": "react-app"
   },
   "devDependencies": {
-    "babel-plugin-import": "^1.3.1",
-    "chalk": "^1.1.3",
-    "eslint-config-airbnb": "^15.1.0",
-    "friendly-errors-webpack-plugin": "^1.6.1",
-    "less": "^2.7.2",
-    "less-loader": "^4.0.5",
-    "postcss-pxtorem": "^3.3.1",
-    "progress-bar-webpack-plugin": "^1.10.0",
-    "react-dev-utils": "^4.2.1",
-    "svg-sprite-loader": "^0.3.1",
-    "webpack": "^2.6.1",
-    "webpack-dev-server": "^2.5.0",
     "autoprefixer": "7.1.1",
-    "babel-core": "6.25.0",
-    "babel-eslint": "7.2.3",
+    "babel-core": "^6.26.0",
+    "babel-eslint": "^7.2.3",
     "babel-jest": "20.0.3",
     "babel-loader": "7.0.0",
+    "babel-plugin-import": "^1.3.1",
     "babel-polyfill": "^6.23.0",
     "babel-preset-react-app": "^3.0.1",
     "babel-runtime": "6.23.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
+    "chalk": "^1.1.3",
     "css-loader": "0.28.4",
     "dotenv": "4.0.0",
     "es6-promise": "^4.1.1",
-    "eslint": "3.19.0",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb": "^15.1.0",
     "eslint-config-react-app": "^1.0.5",
     "eslint-loader": "1.7.1",
     "eslint-plugin-flowtype": "2.34.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^5.0.3",
-    "eslint-plugin-react": "^7.1.0",
+    "eslint-plugin-react": "^7.5.1",
     "extract-text-webpack-plugin": "2.1.2",
     "file-loader": "0.11.2",
+    "friendly-errors-webpack-plugin": "^1.6.1",
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
+    "less": "^2.7.2",
+    "less-loader": "^4.0.5",
     "postcss-flexbugs-fixes": "3.0.0",
     "postcss-loader": "2.0.6",
+    "postcss-pxtorem": "^3.3.1",
+    "progress-bar-webpack-plugin": "^1.10.0",
+    "react-dev-utils": "^4.2.1",
     "style-loader": "0.18.2",
+    "svg-sprite-loader": "^0.3.1",
     "sw-precache-webpack-plugin": "0.11.3",
     "url-loader": "0.5.9",
+    "webpack": "^2.7.0",
+    "webpack-dev-server": "^2.5.0",
     "webpack-manifest-plugin": "1.1.0"
   }
 }
