--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "manconf-react",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "antd-mobile": "^2.0.3",
     "moment": "^2.19.2",
@@ -23,7 +24,8 @@
   "scripts": {
     "dev": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom"
+    "test": "node scripts/test.js --env=jsdom",
+    "server": "node server/www"
   },
   "jest": {
     "collectCoverageFrom": [
@@ -77,6 +79,7 @@
     "babel-runtime": "6.23.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "^1.1.3",
+    "cookie-parser": "^1.4.3",
     "css-loader": "0.28.4",
     "dotenv": "4.0.0",
     "es6-promise": "^4.1.1",
@@ -96,6 +99,7 @@
     "jest": "20.0.4",
     "less": "^2.7.2",
     "less-loader": "^4.0.5",
+    "morgan": "^1.9.0",
     "postcss-flexbugs-fixes": "3.0.0",
     "postcss-loader": "2.0.6",
     "postcss-pxtorem": "^3.3.1",
