--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "homepage": ".",
   "dependencies": {
     "antd-mobile": "^2.0.3",
+    "echarts": "^3.8.5",
+    "intl": "^1.2.5",
     "moment": "^2.19.2",
     "object-assign": "4.1.1",
     "promise": "7.1.1",
+    "raf": "^3.4.0",
     "rc-table": "^6.1.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
