--- a/.eslintrc
+++ b/.eslintrc
@@ -42,24 +42,24 @@
     "jsx-a11y/no-noninteractive-element-interactions": [
       "error",
       {
-        handlers: [
+        "handlers": [
           "onClick",
           "onMouseDown",
           "onMouseUp",
           "onKeyPress",
           "onKeyDown",
-          "onKeyUp",
+          "onKeyUp"
         ]
       }
     ],
     "jsx-a11y/no-noninteractive-element-to-interactive-role": [
       "error",
       {
-        ul: ["listbox", "menu", "menubar", "radiogroup", "tablist", "tree", "treegrid"],
-        ol: ["listbox", "menu", "menubar", "radiogroup", "tablist", "tree", "treegrid"],
-        li: ["menuitem", "option", "row", "tab", "treeitem"],
-        table: ["grid"],
-        td: ["gridcell"]
+        "ul": ["listbox", "menu", "menubar", "radiogroup", "tablist", "tree", "treegrid"],
+        "ol": ["listbox", "menu", "menubar", "radiogroup", "tablist", "tree", "treegrid"],
+        "li": ["menuitem", "option", "row", "tab", "treeitem"],
+        "table": ["grid"],
+        "td": ["gridcell"]
       }
     ],
     "jsx-a11y/anchor-is-valid": [0],
