commit intern info

--- a/.eslintrc
+++ b/.eslintrc
@@ -93,5 +93,6 @@
     "ecmaFeatures": {
       "experimentalObjectRestSpread": true
     }
-  }
+  },
+  "no-unused-vars": ["error", { "args": "none" }]
 }
