--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "homepage": ".",
   "dependencies": {
-    "antd-mobile": "^2.0.3",
+    "antd-mobile": "^2.1.9",
     "echarts": "^3.8.5",
     "intl": "^1.2.5",
     "moment": "^2.19.2",
@@ -100,13 +100,14 @@
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
-    "less": "^2.7.2",
-    "less-loader": "^4.0.5",
+    "less": "^3.0.2",
+    "less-loader": "^4.1.0",
     "morgan": "^1.9.0",
     "postcss-flexbugs-fixes": "3.0.0",
     "postcss-loader": "2.0.6",
     "postcss-pxtorem": "^3.3.1",
     "progress-bar-webpack-plugin": "^1.10.0",
+    "rc-form": "^2.2.0",
     "react-dev-utils": "^4.2.1",
     "style-loader": "0.18.2",
     "svg-sprite-loader": "^0.3.1",
